--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css/style.css">
     <title>Color Changer</title>
 </head>
 <body id="bodyIndex">
     <nav>
         <div class="nav_center">
-            <h4>Color changer</h4>
+            <h4>Color Changer</h4>
             <ul class="nav_links">
-                <li><a href="index.html">simple</a></li>
+                <li><a href="index.html">RGB</a></li>
                 <li><a href="hex.html">hexVersion</a></li>
             </ul>
         </div>
