Agregando la version HEX

--- a/pages/hex.html
+++ b/pages/hex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css/style.css">
+    <link rel="stylesheet" href="../styles.css/style.css">
     <title>Color Changer</title>
 </head>
 <body id="bodyIndex">
@@ -12,8 +12,8 @@
         <div class="nav_center">
             <h4>Color Changer</h4>
             <ul class="nav_links">
-                <li><a href="index.html">RGB</a></li>
-                <li><a href="pages/hex.html">hexVersion</a></li>
+                <li><a href="../index.html">RGB</a></li>
+                <li><a href="hex.html">hexVersion</a></li>
             </ul>
         </div>
     </nav>
@@ -25,6 +25,6 @@
             <button class="btn btn_hero" id="btn">CLICK</button>
         </div>
     </div>
-    <script src="scripts.js/main.js"></script>
+    <script src="../scripts.js/hex.js"></script>
 </body>
 </html>
